# utilscpp

./: .gitignore  README.md  file_helper.cc  json_helper.cc  string_helper.cc
data/: in_file.txt  in_file_2.txt
src/: file_helper.cc  file_helper.h  json_helper.cc  json_helper.h  string_helper.cc  string_helper.h
test_clion/: CMakeLists.txt  CMakeLists.txt.Linux  main.cpp
test_clion/src/: main.cpp
test_vscode/: CMakeLists.txt  main.cpp
test_vscode/src/: fc_base  main.cpp
